Fix docker run script for HBase